<resources>
    <string name="app_name">MyTask</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo_img_dis">Logo</string>
    <string name="splash_footer">GreenHouse</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="create_one">Create one</string>
    <string name="login">Login</string>
</resources>