<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ImageView
        android:layout_alignParentLeft="true"
        android:layout_width="50dp"
        android:layout_height="240dp"
        android:src="@drawable/maskgroup28"
        />

    <ImageView
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_width="70dp"
        android:layout_height="240dp"
        android:src="@drawable/maskgroup29"
        />


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:src="@mipmap/ic_my_logo"
                />
            <ImageView
                android:layout_alignParentLeft="true"
                android:layout_width="180dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_pt_final_logo"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_24"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginBottom="@dimen/_8sdp"
                android:text="Log In"
                android:textStyle="bold"
                android:textColor="#000"
                android:textSize="20sp"
                android:layout_marginTop="12dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout2"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_24"
                app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/btn_login_"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>



            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="12dp"
                    android:layout_marginTop="10dp"
                    android:layout_alignParentRight="true"
                    android:textColor="#203CDA"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="FORGOT PASSWORD?" />
            </RelativeLayout>

            <Button
                android:id="@+id/btn_login_"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_24sdp"
                android:background="@drawable/button_round_black"
                android:text="@string/login"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/ll_signup"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Or"
            android:textSize="@dimen/_14sdp"
            android:gravity="center"
            android:textColor="@color/black"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

               <LinearLayout
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal">

                   <LinearLayout
                       android:gravity="center"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:orientation="horizontal"
                       android:layout_gravity="center"
                       android:background="@drawable/fblogin_bg"
                       android:padding="8dp">

                       <ImageView
                           android:layout_width="24dp"
                           android:layout_height="24dp"
                           android:src="@drawable/maskgroup24"
                           />

                   </LinearLayout>

                   <LinearLayout
                       android:gravity="center"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:orientation="horizontal"
                       android:layout_marginLeft="@dimen/_10sdp"
                       android:layout_gravity="center"
                       android:background="@drawable/login_bg"
                       android:padding="8dp">

                       <ImageView
                           android:layout_width="22dp"
                           android:layout_height="22dp"
                           android:src="@drawable/maskgroup25"
                           />

                   </LinearLayout>
               </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginEnd="@dimen/margin_4"
                    android:layout_marginRight="@dimen/margin_4"
                    android:text="@string/don_t_have_an_account"
                    android:textColor="@color/colorTextSecondary" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_one"
                    android:textStyle="bold"
                    android:textColor="@color/black" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>



</RelativeLayout>